v20061124
	20061112, bertrik
	* usbhw_lpc.c: Updated LED display to show effect of double buffering
	* armvic.c/.h: Newly added (used by serial port example)
	* main_serial.c: Bugfix suggested by Galen Seitz

	20061105, bertrik
	* main_serial.c: now uses FIFO with VCOM_getchar and VCOM_putchar functions to receive/send data
	* serial_fifo.c/.h: Newly added (used by serial port example)

	20061018, bertrik
	* Updated license to modified BSD license

	20060924, bertrik
	* usbstdreq.c: Prevent EPs from being configured when UNconfiguring the device

	20060915, bertrik
	* msc_scsi.c: Implemented more SCSI commands to improve windows compatibility and compliance with specification

	20060912, bertrik
	* usbhw_lpc.c: Updated interrupt clearing order, according to new user manual

	20060906, bertrik
	* usbapi.h: Updated EP_STATUS_* defines

v20060903
	20060830, bertrik
	* Makefiles: Initial try at dependencies
	* lpc2000_spi.c: Fixed silly bug in setting PINSEL1
	
	20060825, bertrik
	* main_*.c: Fixed bug in LE_WORD macro

	20060822, bertrik
	* Device configuration is now done according to USB descriptor.
	* usbapi.h/usbhw_lpc.c: USBHwRegisterEPIntHandler no longer needs the max packet size argument.
	* usbapi.h/usbhw_lpc.c: Added USBHwEPConfig function
	* usbapi.h/usbstdreq.c: USBHandleDescriptor renamed to USBGetDescriptor.
	* usbdescrip.c: code moved into usbstdreq.c, usbdescrip.c removed

	20060820, bertrik
	* msc_scsi.c: now uses #defines instead of numerics

	20060811, bertrik
	* Doxygenised most of the source code

v20060729
	20060729, bertrik
	* Fixed bug with uninitialised variable (iType) in usbcontrol.c
	* Minor cosmetic cleanup

v20060603
	20060530, bertrik
	* startup.c: Updated order of setting MAMTIM and MAMCR.
	  MAMTIM is now set to 3 as suggested in the user manual.

	20060526, bertrik
	* Eliminated copying data around in mass storage example
	
	20060512, bertrik
	* Added mass storage application example (using the SD card interface from EFSL).